@@ -1,5 +1,8 @@
 2019-02-19  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/89391
+	* g++.dg/cpp0x/reinterpret_cast2.C: New test.
+
 	PR c++/89390
 	* g++.dg/diagnostic/pr89390.C: New test.
 
