@@ -1,5 +1,9 @@
 2019-02-19  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/89391
+	* typeck.c (build_reinterpret_cast_1): Don't handle void to
+	&& conversion go through build_target_expr_with_type.
+
 	PR c++/89390
 	* error.c (qualified_name_lookup_error): Only call
 	suggest_alternative_in_scoped_enum if name is IDENTIFIER_NODE.
